test/corpus/assert_with_error.txt
==================
assert with error
==================
proc.foo
    assert.err="something is broken"
end
---

(source_file
  (procedure
    name: (identifier)
    (newline)
    (whitespace)
    body: (block
      (op (assert err: (string)))
    )
    (newline)))
