test/corpus/assert_without_error.txt
==================
assert without error
==================
proc.foo
    assert
end
---

(source_file
  (procedure
    name: (identifier)
    (newline)
    (whitespace)
    body: (block
      (assert))
    (newline)))
