test/corpus/docs.txt
==================
module and procedure documentation
==================
#! this is a module doc string
#!
#! with multiple lines

#! this is a procedure docstring
#!
#! with multiple lines
proc.foo
    # Just a comment
    push.1
end
---

(source_file
  (moduledoc
    (doc_comment_line)
    (doc_comment_line)
    (doc_comment_line))
  (form
    (procedure
        docs: (doc_comment
            (doc_comment_line)
            (doc_comment_line)
            (doc_comment_line))
        name: (identifier)
        (newline)
        (whitespace)
        (comment)
        (whitespace)
        body: (block
        (push (number (decimal))))
        (newline))))
