test/corpus/hex_immedidate.txt
==================
hex immediate
==================
proc.foo
    push.0x01
end
---

(source_file
    (procedure
        name: (identifier)
        (newline)
        (whitespace)
        body: (block
        (push (hex)))
        (newline)))
