test/corpus/import.txt
==================
import
==================
use.std::u64

begin
    exec.u64::wrapping_add
end
---

(source_file
  (form
    (import
        path: (path
        (relative_path
            (identifier)
            (identifier)))))
  (newline)
  (newline)
  (form
    (entrypoint
        (newline)
        (whitespace)
        body: (block
        (invoke
          path: (path
            (relative_path
              (identifier)
              (identifier)))))
        (newline))))
