test/corpus/import_fully_qualified.txt
==================
import fully-qualified path
==================
use.::std::u64

begin
    exec.::std::u64::wrapping_add
end
---

(source_file
  (import
      path: (absolute_path
          (identifier)
          (identifier)))
  (newline)
  (newline)
  (entrypoint
      (newline)
      (whitespace)
      body: (block
      (invoke
        path: (absolute_path
            (identifier)
            (identifier)
            (identifier))))
      (newline)))
