test/corpus/import_with_alias.txt
==================
import with alias
==================
use.std::u64->bigint

begin
    exec.bigint::wrapping_add
end
---

(source_file
  (import
      path: (relative_path
          (identifier)
          (identifier))
      alias: (import_alias name: (identifier)))
  (newline)
  (newline)
  (entrypoint
      (newline)
      (whitespace)
      body: (block
      (invoke
        path: (relative_path
            (identifier)
            (identifier))))
      (newline)))
