test/corpus/integer_immediate.txt
==================
integer immediate
==================
proc.foo
    push.1
end
---

(source_file
    (procedure
        name: (identifier)
        (newline)
        (whitespace)
        body: (block
        (push (decimal)))
        (newline)))
