test/corpus/procedure_with_expr_annotation.txt
==================
procedure with expr annotation
==================
@anno("value")
proc.foo.1
    exec.bar
end
---

(source_file
  (form
    (procedure
        annotations: (annotation
            name: (identifier)
            value: (annotation_value (meta_expr (string (string_content))))
        )
        (newline)
        name: (identifier)
        num_locals: (decimal)
        (newline)
        (whitespace)
        body: (block
        (invoke path: (path (relative_path (identifier)))))
        (newline))))
