test/corpus/procedure_with_key_value_annotation.txt
==================
procedure with key-value annotation
==================
@anno(key = "value")
proc.foo.1
    exec.bar
end
---

(source_file
    (procedure
        annotations: (annotation
        name: (identifier)
        value: (meta_key_value
            name: (identifier)
            (whitespace)
            (whitespace)
            value: (string (string_content)))
        )
        (newline)
        name: (identifier)
        num_locals: (decimal)
        (newline)
        (whitespace)
        body: (block
        (invoke path: (relative_path (identifier))))
        (newline)))
