test/corpus/special_symbol.txt
==================
special symbols
==================
begin
    syscall.$kernel::foo
end
---

(source_file
  (form
    (entrypoint
        (newline)
        (whitespace)
        body: (block
        (invoke path: (path (relative_path (identifier) (identifier)))))
        (newline))))
