test/corpus/word_immediate.txt
==================
word immediate
==================
proc.foo
    push.[1, 0x02, 3, 4]
end
---

(source_file
  (form
    (procedure
        name: (identifier)
        (newline)
        (whitespace)
        body: (block
        (push (number (word
            (integer (decimal))
            (whitespace)
            (integer (hex))
            (whitespace)
            (integer (decimal))
            (whitespace)
            (integer (decimal))
        ))))
        (newline))))
